app/src/test/resources/programs/valid/arrays/simpleArray.exe
foo main() -> Int = {
    let arr: [Int] = new [Int] (3);

    arr[0] = 1;
    arr[1] = 2;
    arr[2] = 3;

    del arr;
    0
}
