app/src/test/resources/programs/invalid/foonctions/functionNoBrackets.exe
foo g -> Nope = {
    2 + 2;
    ()
}

foo main() -> Int = {
    g();
    0
}
